# Spotify_Downloader

./: .gitignore  DEVELOPMENT.md  PROJECT_PROGRESS.md  README.md  Readme.md  Spotify_Scraper.py  TOP5_IMPROVEMENTS.md  USAGE_EXAMPLES.txt  Url_Validator.py  Youtube_query.py  config.json  main.py  pyproject.toml  requirements.txt  run_tests.py  setup.py  test_playlist_scrape.py
.qwen/: RULES.md
docs/: installation.md  usage.md
spotify_downloader/: __init__.py
spotify_downloader/cli/: __init__.py
spotify_downloader/core/: __init__.py  downloader.py
src/: file_converter.py  playlist_scraper.py  spotify_downloader.py  spotify_handler.py  spotify_scraper.py  url_handler.py  youtube_searcher.py
src/spot_downloader/: __init__.py  config.py  main.py
src/spot_downloader/core/: custom_engine.py  downloader.py  searcher.py
src/spot_downloader/gui/: app.py  styles.py
src/spot_downloader/services/: __init__.py  download_service.py
src/spot_downloader/tracker/: __init__.py  download_tracker.py
src/spot_downloader/utils/: __init__.py  error_handling.py  helpers.py  logger.py  rate_limiter.py  retry.py  selenium_scraper.py  tagger.py  throttle.py  validation.py
src/spotify_downloader/: __init__.py  __main__.py
src/spotify_downloader/cli/: __init__.py  main.py
src/spotify_downloader/config/: __init__.py  config.py
src/spotify_downloader/core/: __init__.py  downloader.py
src/spotify_downloader/exceptions/: __init__.py
src/spotify_downloader/services/: __init__.py  file_converter.py  url_handler.py  youtube_searcher.py
src/spotify_downloader/utils/: __init__.py  logger.py
tests/: __init__.py  fixtures.py  test_cancellation.py  test_concurrent_downloader.py  test_config.py  test_downloader.py  test_error_handling.py  test_helpers.py  test_rate_limiter.py  test_scraper.py  test_validation.py
tests/services/: test_url_handler.py
