[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-downloader"
version = "1.0.0"
description = "A professional tool to download Spotify tracks, albums, and playlists as audio files"
readme = "README.md"
authors = [{name = "Qwen", email = "qwen@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities"
]
dependencies = [
    "spotifyscraper>=1.0.0",
    "yt-dlp>=2023.0.0",
    "ffmpeg-python>=0.2.0",
    "requests>=2.25.0",
]
requires-python = ">=3.7"

[project.scripts]
spotify-dl = "spotify_downloader.cli.main:main"

[project.urls]
Homepage = "https://github.com/your-username/Spotify_Downloader"
Repository = "https://github.com/your-username/Spotify_Downloader"

[tool.setuptools.packages.find]
where = ["src"]