[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spot-downloader-desktop"
version = "1.0.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A powerful, rate-limit bypassing Spotify downloader for Desktop."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "customtkinter",
    "spotdl",
    "yt-dlp",
    "mutagen",
    "spotifyscraper",
    "requests",
    "pillow",
    "urllib3",
    "imageio-ffmpeg",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/Spot-Downloader_Desktop"

[project.scripts]
spot-dl-gui = "spot_downloader.main:main"
